Etape 4.6 et 4.7 mise en place du service de detection d'anomalie